--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
@@ -1,28 +1,64 @@
 <form [formGroup]="formTriagem" class="p-grid p-fluid">
     <h2 class="sub-title">Classificação de Risco</h2>
     <div class="classificacao-de-risco">
-        <app-nivel-emergencia class="nivel-emergencia" cor="nao-urgente" (click)="valor(4)"
+
+        <label class="button-triagem nao-urgente" ><input type="radio" name="classificacaoDeRisco"
+                [value]="opcaoClassificacao[4].value" formControlName="classificacaoDeRisco" >
+            <h3>NÃO URGENTE</h3>
+            <p class="classificacao-de-risco-descricao">Sem risco de agravo à saúde, pode aguardar atendimento</p>
+        </label>
+
+        <label class="button-triagem pouco-urgente"><input type="radio" name="classificacaoDeRisco"
+                [value]="opcaoClassificacao[3].value" formControlName="classificacaoDeRisco" >
+            <h3>POUCO URGENTE</h3>
+            <p class="classificacao-de-risco-descricao">Baixo risco de agravo a saúde, pode aguardar atendimento</p>
+        </label>
+
+        <label class="button-triagem urgente"><input type="radio" name="classificacaoDeRisco"
+                [value]="opcaoClassificacao[2].value" formControlName="classificacaoDeRisco" >
+            <h3>URGENTE</h3>
+            <p class="classificacao-de-risco-descricao">Necessita de atendimento rápido, mas pode aguardar</p>
+        </label>
+
+        <label class="button-triagem muito-urgente"><input type="radio" name="classificacaoDeRisco"
+                [value]="opcaoClassificacao[1].value" formControlName="classificacaoDeRisco" >
+            <h3>MUITO URGENTE</h3>
+            <p class="classificacao-de-risco-descricao">Necessita de atendimento praticamente imediato</p>
+        </label>
+
+        <label class="button-triagem emergencia"><input type="radio" name="classificacaoDeRisco"
+                [value]="opcaoClassificacao[0].value" formControlName="classificacaoDeRisco" >
+            <h3>EMERGÊNCIA</h3>
+            <p class="classificacao-de-risco-descricao">Necessita de atendimento imediato</p>
+        </label>
+
+        <!-- <app-nivel-emergencia cor="nao-urgente" title="NÃO URGENTE"
+            descricao="Sem risco de agravo à saúde, pode aguardar atendimento">
+        </app-nivel-emergencia>
+
+        <app-nivel-emergencia class="nivel-emergencia" (click)="valor(4)" type="button" cor="nao-urgente"
             title="NÃO URGENTE" descricao="Sem risco de agravo à saúde, pode aguardar atendimento">
         </app-nivel-emergencia>
 
-        <app-nivel-emergencia class="nivel-emergencia" cor="pouco-urgente"
-            title="POUCO URGENTE" descricao="Baixo risco de agravo a saúde, pode aguardar atendimento">
+        <app-nivel-emergencia class="nivel-emergencia" cor="pouco-urgente" title="POUCO URGENTE"
+            descricao="Baixo risco de agravo a saúde, pode aguardar atendimento">
         </app-nivel-emergencia>
 
-        <app-nivel-emergencia class="nivel-emergencia" cor="urgente"
-            title="URGENTE" descricao="Necessita de atendimento rápido, mas pode aguardar">
+        <app-nivel-emergencia class="nivel-emergencia" cor="urgente" title="URGENTE"
+            descricao="Necessita de atendimento rápido, mas pode aguardar">
         </app-nivel-emergencia>
 
-        <app-nivel-emergencia class="nivel-emergencia" cor="muito-urgente"
-            title="MUITO URGENTE" descricao="Necessita de atendimento praticamente imediato">
+        <app-nivel-emergencia class="nivel-emergencia" cor="muito-urgente" title="MUITO URGENTE"
+            descricao="Necessita de atendimento praticamente imediato">
         </app-nivel-emergencia>
 
-        <app-nivel-emergencia class="nivel-emergencia" cor="emergencia"
-            title="EMERGÊNCIA" descricao="Necessita de atendimento imediato">
-        </app-nivel-emergencia>
-    </div> 
+        <app-nivel-emergencia class="nivel-emergencia" cor="emergencia" title="EMERGÊNCIA"
+            descricao="Necessita de atendimento imediato" nivel=4>
+        </app-nivel-emergencia> -->
 
-        <!-- <button class="button-triagem pouco-urgente">
+    </div>
+
+    <!-- <button class="button-triagem pouco-urgente">
             <h3>POUCO URGENTE</h3>
             <p class="classificacao-de-risco-descricao">Baixo risco de agravo a saúde, pode aguardar atendimento
             </p>
@@ -42,6 +78,7 @@
             <h3>EMERGÊNCIA</h3>
             <p class="classificacao-de-risco-descricao">Necessita de atendimento imediato</p>
         </button> -->
+
     <!-- <div class="p-dataview p-grid p-md-12 p-sm-12">
         <div class="p-md-7">
             <h3>
