--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.scss
@@ -21,7 +21,7 @@
     box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06);
     border-radius: 4px;
     margin: 10px;
-    height: 200px;
+    height: 100%;
     width: 100%;
   }
     
@@ -35,6 +35,14 @@
   
   .nao-urgente:hover p {
     background: #0673A8;
+  }
+
+  .nao-urgente-selecionado {
+    background: linear-gradient(112.64deg, #1FAAEE -0.07%, #0982BD 100%), #F5F5F5;
+    border: solid #0982BD;
+    box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.06);
+    border-radius: 4px;
+    color: white;
   }
 
   .nao-urgente:active {
@@ -91,4 +99,8 @@
   
   .emergencia:hover p {
     background: #9B0303;
+  }
+
+  .teste {
+    background-color: red;
   }
