--- a/frontend/src/assets/layout/css/layout-light.css
+++ b/frontend/src/assets/layout/css/layout-light.css
@@ -333,6 +333,7 @@ p {
   margin-bottom: 2rem;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
   border-radius: 5px;
+  width: 100%;
 }
 
 .card:last-child {
@@ -5167,6 +5168,7 @@ body a {
   border-radius: 15px;
   margin: 5px;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 .nivel-emergencia {
