classificacao de risco - nivel emergencia - BASIS-208397

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
@@ -7,7 +7,8 @@
             cor="nao-urgente" 
             title="NÃO URGENTE"
             descricao="Sem risco de agravo à saúde, pode aguardar atendimento" 
-            [value]="opcaoClassificacao[4].value">
+            [value]="opcaoClassificacao[4].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
@@ -16,7 +17,8 @@
             cor="pouco-urgente" 
             title="POUCO URGENTE"
             descricao="Baixo risco de agravo a saúde, pode aguardar atendimento" 
-            [value]="opcaoClassificacao[3].value">
+            [value]="opcaoClassificacao[3].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
@@ -25,7 +27,8 @@
             cor="urgente" 
             title="URGENTE"
             descricao="Necessita de atendimento rápido, mas pode aguardar" 
-            [value]="opcaoClassificacao[2].value">
+            [value]="opcaoClassificacao[2].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
@@ -34,7 +37,8 @@
             cor="muito-urgente" 
             title="MUITO URGENTE"
             descricao="Necessita de atendimento praticamente imediato" 
-            [value]="opcaoClassificacao[1].value">
+            [value]="opcaoClassificacao[1].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
@@ -43,7 +47,8 @@
             cor="emergencia" 
             title="EMERGÊNCIA"
             descricao="Necessita de atendimento imediato" 
-            [value]="opcaoClassificacao[0].value">
+            [value]="opcaoClassificacao[0].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
     </div>
