Revert "layout triagem - BASIS-2083897"
This reverts commit fb2f5e6eccbc3d1d9b850975030d1ac0156fcbac.

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/classificacao-de-risco/classificacao-de-risco.component.html
@@ -1,49 +1,54 @@
 <form [formGroup]="formTriagem" class="p-grid p-fluid">
-    <h2 class="sub-title">Classificação de Risco</h2>
-    <div class="p-grid classificacao-de-risco">
+    <h2 class="p-md-12 sub-title">Classificação de Risco</h2>
+    <div class="classificacao-de-risco">
         <app-nivel-emergencia 
             [control]="formTriagem.controls.classificacaoDeRisco" 
-            class="p-col button-triagem" 
+            class="button-triagem" 
             cor="nao-urgente" 
             title="NÃO URGENTE"
             descricao="Sem risco de agravo à saúde, pode aguardar atendimento" 
-            [value]="opcaoClassificacao[4].value">
+            [value]="opcaoClassificacao[4].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
             [control]="formTriagem.controls.classificacaoDeRisco" 
-            class="p-col button-triagem" 
+            class="button-triagem" 
             cor="pouco-urgente" 
             title="POUCO URGENTE"
             descricao="Baixo risco de agravo a saúde, pode aguardar atendimento" 
-            [value]="opcaoClassificacao[3].value">
+            [value]="opcaoClassificacao[3].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
             [control]="formTriagem.get('classificacaoDeRisco')" 
-            class="p-col button-triagem" 
+            class="button-triagem" 
             cor="urgente" 
             title="URGENTE"
             descricao="Necessita de atendimento rápido, mas pode aguardar" 
-            [value]="opcaoClassificacao[2].value">
+            [value]="opcaoClassificacao[2].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
             [control]="formTriagem.get('classificacaoDeRisco')" 
-            class="p-col button-triagem" 
+            class="button-triagem" 
             cor="muito-urgente" 
             title="MUITO URGENTE"
             descricao="Necessita de atendimento praticamente imediato" 
-            [value]="opcaoClassificacao[1].value">
+            [value]="opcaoClassificacao[1].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
         <app-nivel-emergencia 
             [control]="formTriagem.get('classificacaoDeRisco')" 
-            class="p-col button-triagem" 
+            class="button-triagem" 
             cor="emergencia" 
             title="EMERGÊNCIA"
             descricao="Necessita de atendimento imediato" 
-            [value]="opcaoClassificacao[0].value">
+            [value]="opcaoClassificacao[0].value"
+            style="width: 20%;">
         </app-nivel-emergencia>
 
     </div>
