Corrigir erro no deploy do menu Exames - BASIS-206711

--- a/frontend/src/app/exames/components/atendimento-diverso/atendimento-diverso.component.html
+++ b/frontend/src/app/exames/components/atendimento-diverso/atendimento-diverso.component.html
@@ -57,7 +57,7 @@
       </span>
       <span id="grupo">
         <label> Data Soro: </label> <br>
-        <p-calendar class="calendar-input" [(ngModel)]="date" showIcon="true" icon="pi pi-calendar"
+        <p-calendar class="calendar-input" showIcon="true" icon="pi pi-calendar"
           [readonlyInput]="true" dateFormat="dd/mm/yy"></p-calendar>
       </span>
     </div>
@@ -101,7 +101,7 @@
       </span>
       <span id="grupo">
         <label> Data Nascimento: </label> <br>
-        <p-calendar class="calendar-input" [(ngModel)]="date" showIcon="true" icon="pi pi-calendar"
+        <p-calendar class="calendar-input" showIcon="true" icon="pi pi-calendar"
           [readonlyInput]="true" dateFormat="dd/mm/yy"></p-calendar>
       </span>
       <span id="grupo">
