--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -117,14 +117,13 @@
               </div>
             </p-tabPanel>
 
-            <!-- If needed, crete one button for each Tab view. then, change and add a click method for each button. -->
             <button
               pButton
               label="Adicionar"
               type="button"
               icon="pi pi-plus"
               iconPos="left"
-              (click)="handleClick($event)"
+              (click)="handleClick()"
             ></button>
 
         </p-tabView>
