Adicionar api de unidades no dropdown

--- a/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
+++ b/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
@@ -51,7 +51,10 @@
                 <div class="p-md-2 p-fluid">
                     Unidade Funcional
                     <span class="md-inputfield p-float-label" style="margin-top: 5px;">
-                        <p-dropdown [options]="opcoesDeOrigem" pTooltip="Selecione a unidade de internação.">
+                        <p-dropdown [options]="unidades"
+                        [optionLabel]="'nome'"
+                        [optionValue]="'id'"
+                        pTooltip="Selecione a unidade de internação.">
                         </p-dropdown>
                     </span>
                 </div>
