adicionar api de cadaver no dropdown - BASIS-206708

--- a/frontend/src/app/exames/components/atendimento-diverso/atendimento-diverso.component.html
+++ b/frontend/src/app/exames/components/atendimento-diverso/atendimento-diverso.component.html
@@ -16,12 +16,6 @@
 
     <div class="atend">
       <span id="grupo">
-        <label> Projeto de pesquisa: </label> <br>
-      </span>
-      <p-dropdown [options]="teste" [(ngModel)]="selectedTeste"></p-dropdown>
-    </div>
-    <div class="atend">
-      <span id="grupo">
         <label> Laboratorio Externo: </label> <br>
       </span>
       <p-dropdown [options]="teste" [(ngModel)]="selectedTeste"></p-dropdown>
@@ -36,7 +30,9 @@
       <span id="grupo">
         <label> Cadavér: </label> <br>
       </span>
-      <p-dropdown [options]="teste" [(ngModel)]="selectedTeste"></p-dropdown>
+      <p-dropdown
+        [options]="groups" [optionLabel]="'nome'" [optionValue]="'codigo'"
+      ></p-dropdown>
     </div>
 
   </p-fieldset>
